--- a/css/creative2.css
+++ b/css/creative2.css
@@ -1,4 +1,14 @@
 /* Inserta tu codigo CSS aqui */
+img{
+	width: 100%;
+}
+.caja{
+	margin: 0;
+	padding: 0;
+}
+body{ 
+	font-size: 1.3rem;
+}
 .text-center{
 	text-align: center;
 }
@@ -6,7 +16,7 @@
 	color:#F05F40;
 }
 #service{
-	padding:3% 0% 5%;
+	padding:3% 8% 5%;
 }
 
 hr{
@@ -14,42 +24,12 @@ hr{
 	width: 35px;
 }
 .items{
-	width: 65%;
+	width: 80%;
 	
 	margin:0 auto;
 }
 .items h4{
-	font-size: 2.1rem;
-}
-.primero{
-	background: url(../img/portfolio/1.jpg)no-repeat;
-	background-size: cover;
-	min-height: 300px;
-}
-.segundo{
-	background: url(../img/portfolio/2.jpg)no-repeat;
-	background-size: cover;
-	min-height: 300px;
-}
-.tercero{
-	background: url(../img/portfolio/3.jpg)no-repeat;
-	background-size: cover;
-	min-height: 300px;
-}
-.cuarto{
-	background: url(../img/portfolio/4.jpg)no-repeat;
-	background-size: cover;
-	min-height: 300px;
-}
-.quinto{
-	background: url(../img/portfolio/5.jpg)no-repeat;
-	background-size: cover;
-	min-height: 300px;
-}
-.sexto{
-	background: url(../img/portfolio/6.jpg)no-repeat;
-	background-size: cover;
-	min-height: 300px;
+	font-size: 1.9rem;
 }
 #github {
 	background-color: #222222;
@@ -59,32 +39,34 @@ hr{
 #github a{
 	text-decoration: none;
 	display: inline-block;
-	padding: 15px 35px;
+	margin-top: 10px;
+	padding: 12px 27px;
 	background-color: white;
 	color:black;
-	border-radius: 30px;
+	border-radius: 35px;
 	font-weight: bold;
-	font-size: 1.1rem;
+	font-size: 1rem;
 }
 #github p{
-	font-size: 2rem;
+	font-size: 2.1rem;
 	line-height: 1.2;
 }
 
-@media (max-width: 991px) { 
+@media (max-width: 991px) {
+	
+	.imagen{
+		position: relative;
+		opacity: 0.1;
+	}
 	.items{
 		width: 95%;
-		margin:40px auto 20px;
-		
+		margin:40px auto 20px;	
 	}
 	.items p{
 		margin-bottom: 40px;
 	}
-
 	.sombra{
-		background-color: rgba(240, 95, 64,0.8);
-		margin:0px -15px;
-		height: 300px;
+		background-color: rgb(240, 95, 64);
 		color:white;
 	}
 	.sombra span{
@@ -93,15 +75,27 @@ hr{
 		font-size: 1.5rem;
 	}
 	.centro{
-		position: relative;
+		position: absolute;
+		width: 100%;
 		top: 50%;
-		transform:translateY(-50%);
+		transform: translateY(-50%);
 		font-size: 1.8rem;
 	}
-}
-@media (min-width: 992px) { 
-	.sombra{
+	.hid{
 		display: none;
 	}
+	#github{
+		padding:40px 0px;
+	}
+	#github p{
+		width: 300px;
+		margin:0 auto;
+	}
+
 }
+@media (min-width: 992px) { 
+	.centro{
+		display: none;
+	}
+	
 
