--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1148,7 +1148,8 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #eee;
+  border-top: 3.9px solid #f05f40;
+    width: 3.2%;
 }
 .sr-only {
   position: absolute;
@@ -1185,7 +1186,7 @@ h6,
 .h5,
 .h6 {
   font-family: inherit;
-  font-weight: 500;
+ 
   line-height: 1.1;
   color: inherit;
 }
@@ -1217,13 +1218,12 @@ h6 .small,
   line-height: 1;
   color: #777;
 }
-h1,
-.h1,
+
 h2,
 .h2,
 h3,
 .h3 {
-  margin-top: 20px;
+  margin-top: 0px;
   margin-bottom: 10px;
 }
 h1 small,
@@ -3007,7 +3007,7 @@ select[multiple].input-lg {
   padding: 6px 12px;
   margin-bottom: 0;
   font-size: 14px;
-  font-weight: normal;
+  font-weight: 700;
   line-height: 1.42857143;
   text-align: center;
   white-space: nowrap;
@@ -3022,6 +3022,9 @@ select[multiple].input-lg {
   background-image: none;
   border: 1px solid transparent;
   border-radius: 4px;
+  background-color: #f05f40;
+      color: white;
+font-family: "Open Sans";
 }
 .btn:focus,
 .btn:active:focus,
@@ -3436,10 +3439,10 @@ fieldset[disabled] .btn-link:focus {
 }
 .btn-lg,
 .btn-group-lg > .btn {
-  padding: 10px 16px;
-  font-size: 18px;
-  line-height: 1.3333333;
-  border-radius: 6px;
+    padding: 11px 29px;
+    font-size: 15px;
+    line-height: 1.3333333;
+    border-radius: 28px;
 }
 .btn-sm,
 .btn-group-sm > .btn {
@@ -3975,13 +3978,15 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-left: -1px;
 }
 .nav {
-  padding-left: 0;
+  padding-left: 15px;
+    padding-right: 23px;
   margin-bottom: 0;
   list-style: none;
 }
 .nav > li {
   position: relative;
   display: block;
+ 
 }
 .nav > li > a {
   position: relative;
@@ -4276,8 +4281,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-brand {
   float: left;
-  height: 50px;
-  padding: 15px 15px;
+  
+  padding: 3.5px 15px;
   font-size: 18px;
   line-height: 20px;
 }
@@ -4297,13 +4302,13 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-toggle {
   position: relative;
   float: right;
-  padding: 9px 10px;
+  padding: 9px 7px 9px 8px;
   margin-top: 8px;
   margin-right: 15px;
   margin-bottom: 8px;
   background-color: transparent;
   background-image: none;
-  border: 1px solid transparent;
+  border: 1px solid #ccc;
   border-radius: 4px;
 }
 .navbar-toggle:focus {
@@ -4324,12 +4329,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-nav {
-  margin: 7.5px -15px;
+  
 }
 .navbar-nav > li > a {
   padding-top: 10px;
   padding-bottom: 10px;
-  line-height: 20px;
+
 }
 @media (max-width: 767px) {
   .navbar-nav .open .dropdown-menu {
@@ -4357,7 +4362,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 @media (min-width: 768px) {
   .navbar-nav {
     float: left;
-    margin: 0;
+   
   }
   .navbar-nav > li {
     float: left;
@@ -4592,27 +4597,35 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
 .navbar-inverse {
-  background-color: #222;
-  border-color: #080808;
+  
+  border-color: transparent;
 }
 .navbar-inverse .navbar-brand {
-  color: #9d9d9d;
+  color: white;
+      font-family: "Open Sans";
+    font-size: 15.5px;
 }
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
-  color: #fff;
-  background-color: transparent;
+  color: white;
+  text-shadow: 1px 1px 8px #f05f40;
+
 }
 .navbar-inverse .navbar-text {
   color: #9d9d9d;
 }
 .navbar-inverse .navbar-nav > li > a {
-  color: #9d9d9d;
+  color: white;
+      font-family: "Open Sans";
+    font-size: 15.5px;
 }
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-  color: #fff;
+  color: #f05f40;
   background-color: transparent;
+      font-family: "Open Sans";
+    font-size: 15.5px;
+        text-shadow: 0.2px 0.2px 3px #000000;
 }
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
@@ -4627,18 +4640,25 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   background-color: transparent;
 }
 .navbar-inverse .navbar-toggle {
-  border-color: #333;
+
 }
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle:focus {
-  background-color: #333;
+  background-color: #f05f40;
+  border: 0px solid #ccc;
 }
 .navbar-inverse .navbar-toggle .icon-bar {
-  background-color: #fff;
+  background-color: #ccc;
 }
+.navbar-inverse .navbar-toggle .icon-bar:hover,
+.navbar-inverse .navbar-toggle .icon-bar:focus{
+  background-color: white !important;
+}
+
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
-  border-color: #101010;
+  border-color: rgba(255, 255, 255, 0.44);
+
 }
 .navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .open > a:hover,
