--- a/css/creative.css
+++ b/css/creative.css
@@ -1,1 +1,320 @@
-/* Inserta tu codigo CSS aqui */
+@media (min-width: 320px) and (max-width: 640px) {
+	nav {
+   		 background-color: white;
+   		color: #0DC0C0;
+   	
+	}
+  .nav {
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
+	nav a:hover {
+	color: white;
+	background-color: #0DC0C0;
+	border-radius: 5px;
+}
+.nav > li > a:hover,
+.nav > li > a:focus {
+  text-decoration: none;
+  color: white;
+ }
+figure.effect-phoebe h2 {
+    margin-top: -1.3em !important;
+    font-size: 24px;
+}
+.opacity .container {
+    margin: 0 !important;
+    
+}
+
+
+.padd{
+	padding-left: 2% !important;
+	padding-right: 2% !important;
+  border-bottom: 0px solid rgba(255, 255, 255, 0.44) !important;
+}
+
+.navbar-brand {
+  font-size: 16px !important;
+  padding: 7px 15px !important; 
+
+}
+.texto h1
+{
+	font-size: 37px !important;
+	padding-top: 47% !important;
+  padding-left: 2% !important;
+    padding-right: 2% !important;
+}
+.texto p{
+	font-size: 19px !important;
+	padding-top: 4%;
+	padding-left: 11%;
+	padding-right: 11%;
+}
+
+.texto{
+	color: white;
+	padding-top: 0% !important;
+	margin: auto;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+
+}
+.navbar-inverse .navbar-nav > li > a {
+    color: #f05f40;
+  }
+  .navbar-inverse .navbar-brand {
+    color: #f05f40;}
+aside{
+	height: 800px !important;
+	background: url(../img/background/hero.jpg) no-repeat;
+	background-size: cover;
+	width: 100%;
+	background-attachment: fixed;
+}
+.opacity {
+	background-color: rgba(0, 0, 0, 0.50);
+	height: 800px !important;
+}
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+    color: white !important;
+  }
+  .section1 p {
+    padding-bottom: 19% !important;
+    padding-left: 5% !important;
+    padding-right: 4% !important;
+}
+.section1 h3{
+  padding-top: 15% !important;
+}
+
+#service h3{
+  padding-top: 10% !important;
+}
+#github{
+      padding: 4% 0% 10% 0% !important;
+}
+
+#github p{
+ padding-left: 10% !important;
+ padding-right: 10% !important;
+     padding-top: 3% !important;
+    padding-bottom: 2% !important;
+}
+footer{
+    padding-top: 9% !important;
+    padding-bottom: 46% !important;
+}
+footer p {
+    padding-left: 4% !important;
+    padding-right: 4% !important;
+}
+.navbar-toggle:hover {
+  cursor: pointer; }
+.navbar-toggle.open .icon-bar {
+  background: #fff; }
+  .navbar-toggle.open .icon-bar:first-child {
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(48deg);
+    -webkit-transform-origin: 10px;
+    -moz-transform-origin: 10px;
+    -ms-transform-origin: 10px;
+    -o-transform-origin: 10px;
+    transform-origin: 3px; }
+  .navbar-toggle.open .icon-bar:nth-child(2) {
+    opacity: 0; }
+  .navbar-toggle.open .icon-bar:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-46deg);
+    -webkit-transform-origin: 8px;
+    -moz-transform-origin: 8px;
+    -ms-transform-origin: 8px;
+    -o-transform-origin: 8px;
+    transform-origin: 2px; }
+
+.icon-bar {
+  -webkit-transition-property: all;
+  -moz-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  display: block;
+  width: 26px;
+  height: 2px;
+  margin: 0 0 5px;
+  background: #fff; }
+
+  .icon-bar:nth-child(3){
+        margin-bottom: 0px !important;
+    margin-top: 0px !important;
+  }
+
+ /* Bounce To Right */
+.hvr-bounce-to-right {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  position: relative;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+}
+.hvr-bounce-to-right:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(240, 95, 64, 0);
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: 0 50%;
+  transform-origin: 0 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-bounce-to-right:hover, .hvr-bounce-to-right:focus, .hvr-bounce-to-right:active {
+  color: white;
+}
+.hvr-bounce-to-right:hover:before, .hvr-bounce-to-right:focus:before, .hvr-bounce-to-right:active:before {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+  -webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+  transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+}
+
+
+.hvr-bounce-to-right{display:inline-block;vertical-align:middle;-webkit-transform:translateZ(0);transform:translateZ(0);box-shadow:0 0 1px rgba(0,0,0,0);-webkit-backface-visibility:hidden;backface-visibility:hidden;-moz-osx-font-smoothing:grayscale;position:relative;-webkit-transition-property:color;transition-property:color;-webkit-transition-duration:.5s;transition-duration:.5s}.hvr-bounce-to-right:before{content:"";position:absolute;z-index:-1;top:0;left:0;right:0;bottom:0;background: #f05f40; border-radius: 5px;-webkit-transform:scaleX(0);transform:scaleX(0);-webkit-transform-origin:0 50%;transform-origin:0 50%;-webkit-transition-property:transform;transition-property:transform;-webkit-transition-duration:.5s;transition-duration:.5s;
+-webkit-transition-timing-function:ease-out;transition-timing-function:ease-out} .
+hvr-bounce-to-right:active,.hvr-bounce-to-right:focus,.hvr-bounce-to-right:hover{color:#fff}.hvr-bounce-to-right:active:before,.hvr-bounce-to-right:focus:before,.hvr-bounce-to-right:hover:before{-webkit-transform:scaleX(1);transform:scaleX(1);-webkit-transition-timing-function:cubic-bezier(0.52,1.64,.37,.66);transition-timing-function:cubic-bezier(0.52,1.64,.37,.66)}.hvr-bounce-to-left{display:inline-block;vertical-align:middle;-webkit-transform:translateZ(0);transform:translateZ(0);box-shadow:0 0 1px rgba(0,0,0,0);-webkit-backface-visibility:hidden;backface-visibility:hidden;-moz-osx-font-smoothing:grayscale;position:relative;-webkit-transition-property:color;transition-property:color;-webkit-transition-duration:.5s;transition-duration:.5s}
+
+}
+
+/*----*/
+.nav > li > a:hover,
+.nav > li > a:focus {
+  text-decoration: none;
+ 
+}
+
+nav {
+	font-size: 1.4em;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.44);
+}
+
+nav a {
+	font-size: 0.9em;
+	color: white;
+	
+	font-weight: bold;
+}
+
+nav li a:hover {
+	color: #0DC0C0;
+	}
+
+#menu.active {
+	background-color: #f2755a;
+	padding: -28px 0;
+  font-color: white !important;
+  webkit-transform: translateY(0);
+	-moz-transform: translateY(0);
+	-ms-transform: translateY(0);
+	-o-transform: translateY(0);
+	transform: translateY(0);
+	-webkit-transition: all 0s ease-in-out;
+	-moz-transition: all 0s ease-in-out;
+	transition: all 0.1s ease-in-out;
+	-webkit-transform: translateZ(0);
+}
+/*END HEADER*/
+
+#menu i{
+	color: white;
+}
+aside{
+	height: 969px;
+	background: url(../img/header.jpg) no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+}
+
+.texto{
+	color: white;
+	padding-top: 16%;
+	margin: auto;
+      padding-left: 20%;
+    padding-right: 20%;
+
+}
+
+.padd{
+	padding-left: 0%;
+	padding-right: 0%;
+
+}
+
+nav h1{
+	font-size: 0.95em !important;
+}
+
+.texto p{
+	font-size: 22px;
+	padding-top: 2%;
+}
+
+.mg0auto{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.section1{
+  background-color: #f05f40;
+  color: white;
+}
+.section1 h3{
+  padding-top: 2%;
+}
+
+.section1 hr{
+  border: 1px solid white !important;
+}
+.section1 p{
+  padding-bottom: 4%;
+    padding-left: 33%;
+    padding-right: 33%;
+}
+
+footer i{
+  font-size: 2em;
+}
+footer p{
+      padding-left: 33%;
+    padding-right: 33%;
+}
+.email{
+  color: #f05f40
+}
+.email a{
+  text-decoration: none;
+  color: #f05f40;
+}
